k8s-configs/ping-cloud/base/pingdirectory/base/statefulset.yaml
# This defines the deployment (as a stateful set) of the pingdirectory servers

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingdirectory
  labels:
    class: pingdirectory-server
spec:
  serviceName: pingdirectory
  replicas: 2
  selector:
    matchLabels:
      class: pingdirectory-server
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: OrderedReady
  template:
    metadata:
      annotations:
        lastUpdateReason: "NA"
      labels:
        class: pingdirectory-server
    spec:
      serviceAccount: ping-serviceaccount
      affinity:
        podAntiAffinity:
          # Add a hard requirement for each PD pod to be deployed to a different node
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: role
                operator: In
                values:
                - pingdirectory
            topologyKey: "kubernetes.io/hostname"
          # Add a soft requirement for each PD pod to be deployed to a different AZ
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: role
                  operator: In
                  values:
                  - pingdirectory
              topologyKey: "failure-domain.beta.kubernetes.io/zone"
      terminationGracePeriodSeconds: 300
      containers:
      - name: pingdirectory
        image: pingidentity/pingdirectory:2003-8.0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 1389
          name: ldap
        - containerPort: 1636
          name: ldaps
        resources:
          requests:
            memory: "5Gi"
            cpu: "2"
          limits:
            memory: "5Gi"
            cpu: "2"
        volumeMounts:
        # FIXME: fix home directory when containers run as non-root user
        - name: ssh-dir
          mountPath: /root/.ssh
        - name: data-dir
          mountPath: /opt/staging/topology.json
          subPath: topology.json
        - name: data-dir
          mountPath: /usr/local/bin/kubectl
          subPath: kubectl
        - name: out-dir
          mountPath: /opt/out
        - name: pingdirectory-passwords
          mountPath: /usr/local/secrets
          readOnly: true
        - name: pingdirectory-license
          mountPath: /opt/in/instance/PingDirectory.lic
          subPath: PingDirectory.lic
        - name: data-dir
          mountPath: /opt/staging/env_vars
          subPath: env_vars
        readinessProbe:
          exec:
            command: [ liveness.sh ]
          # Do not start the readiness probe for 3 minutes after starting the
          # container because PD will never finish its start/restart sequence
          # before then, in practice. Run the readiness probe every 5 seconds
          # and tolerate up to 3 failures, so PD cannot falsely be considered
          # READY for more than 15 seconds in a row.
          initialDelaySeconds: 180
          periodSeconds: 5
          failureThreshold: 3
        livenessProbe:
          exec:
            command: [ liveness.sh ]
          # Health checks will kick in 5 minutes after the pod starts up.
          initialDelaySeconds: 300
          periodSeconds: 30
          failureThreshold: 3
        lifecycle:
          preStop:
            exec:
              command:
              - /opt/staging/hooks/86-pre-stop.sh
      - name: pingdirectory-statsd-exporter
        image: prom/statsd-exporter:v0.14.1
        args:
        - "--statsd.mapping-config=/tmp/mapping/pingdirectory-statsd-mapping.yml"
        - "--statsd.listen-udp=:8125"
        - "--web.listen-address=:9102"
        ports:
          - containerPort: 9102
            protocol: TCP
          - containerPort: 8125
            protocol: UDP
        volumeMounts:
          - mountPath: /tmp/mapping/
            name: pingdirectory-statsd-mapping
            readOnly: false
      volumes:
      - name: ssh-dir
        emptyDir: {}
      - name: data-dir
        emptyDir: {}
      - name: pingdirectory-init
        configMap:
          name: pingcommon-init
          defaultMode: 0555
      - name: ssh-id-key-secret
        secret:
          secretName: ssh-id-key-secret
          optional: true
          defaultMode: 0400
      - name: known-hosts-config
        configMap:
          name: known-hosts-config
          optional: true
          defaultMode: 0644
      - name: out-dir
        persistentVolumeClaim:
          claimName: out-dir
      - name: pingdirectory-license
        secret:
          secretName: pingdirectory-license
          optional: true
          defaultMode: 0400
      - name: pingdirectory-passwords
        secret:
          secretName: pingdirectory-passwords
          optional: true
          defaultMode: 0400
      - name: pingdirectory-statsd-mapping
        configMap:
          name: pingdirectory-statsd-mapping
  volumeClaimTemplates:
  - metadata:
      name: out-dir
      labels:
        class: pingdirectory-server
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: pingdirectory-gp2
      resources:
        requests:
          storage: 40Gi
